# ArrayMultithreadProcessing

./: CMakeLists.txt  LICENSE  README.md  array_processor.h  benchmarks.cpp  run_ci.sh  test.cpp
